JDK-8367338: add exports to run command